--- a/talks.html
+++ b/talks.html
@@ -37,6 +37,10 @@ title: Talks
               </div>
               <div class="abstract">
                 {{talk.desc | markdownify}}
+
+                {% if talk.video %}
+                <p><a href="{{talk.video}}">Watch the video</a></p>
+                {% endif %}
               </div>
             </div>
           </li>
