--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ bodytags: with-hero
     </ul>
     <div style="text-align: right">
       <a class="button primary" href="/sponsoring/">
-        See all sponsors
+        Become a sponsor
       </a>
     </div>
   </section>
