added extra CFP block

--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@ bodytags: with-hero
       </div>
 
       <div class="location">
+        <p class="desc">Call for Papers</p>
+        <p>
+          <a href="http://cfp.rustfest.eu">Submit <br/>your proposal</a>
+
+        </p>
+      </div>
+
+      <div class="location">
         <p class="desc">Location</p>
         <p>
           <address title="6 V. Hetmana Street, 03057, Kyiv">
