Moved CFP call to action into it's own block

--- a/index.html
+++ b/index.html
@@ -18,14 +18,6 @@ bodytags: with-hero
       </div>
 
       <div class="location">
-        <p class="desc">Call for Papers</p>
-        <p>
-          <a href="http://cfp.rustfest.eu">Submit <br/>your proposal</a>
-
-        </p>
-      </div>
-
-      <div class="location">
         <p class="desc">Location</p>
         <p>
           <address title="6 V. Hetmana Street, 03057, Kyiv">
@@ -36,6 +28,17 @@ bodytags: with-hero
       </div>
     </div>
 
+  </section>
+</div>
+
+<div id="call-for-proposals" class="sponsors">
+  <section>
+    <h2>Call for Proposals is Now Open</h2>
+    <div style="text-align: center">
+      <a class="button primary" href="/papers/">
+        Submit a Proposal Now
+      </a>
+    </div>
   </section>
 </div>
 
