Moved CFP call to action into it's own block

--- a/index.html
+++ b/index.html
@@ -47,6 +47,17 @@ bodytags: with-hero
   </section>
 </div>
 
+<div id="call-for-proposals" class="sponsors">
+  <section>
+    <h2>Call for Proposals is Now Open</h2>
+    <div style="text-align: center">
+      <a class="button primary" href="/papers/">
+        Submit a Proposal Now
+      </a>
+    </div>
+  </section>
+</div>
+
 <div class='popout videoplaylist'>
   <section>
     <h1>RustFest 2016 - Videos</h1>
