point CFP button to a CFP app

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ bodytags: with-hero
   <section>
     <h2>Call for Proposals is Now Open</h2>
     <div style="text-align: center">
-      <a class="button primary" href="/papers/">
+      <a class="button primary" href="http://cfp.rustfest.eu">
         Submit a Proposal Now
       </a>
     </div>
