--- a/index.html
+++ b/index.html
@@ -59,9 +59,10 @@ bodytags: with-hero
         {% endif %}
       {% endfor %}
     </ul>
+    <p>Interested in sponsoring?<p>
     <div style="text-align: right">
       <a class="button primary" href="/sponsoring/">
-        Become a sponsor
+        Get in touch
       </a>
     </div>
   </section>
