Add ticket section. Supporter available now

--- a/index.html
+++ b/index.html
@@ -47,12 +47,50 @@ bodytags: with-hero
   </section>
 </div>
 
-<div class='popout videoplaylist'>
+<div id="tickets">
   <section>
-    <h1>RustFest 2016 - Videos</h1>
-    <iframe width="853" height="480" src="https://www.youtube.com/embed/videoseries?list=PL85XCvVPmGQh8nWR_Z-fTmPGsUWuzb-dn" frameborder="0" allowfullscreen></iframe>
+    <h2>Get your Ticket now</h2>
+    <ul class="tickets">
+      <li>
+        <h3>Regular</h3>
+        <span class="price">89</span>
+        <p class="smallprint">
+          Regular conference ticket.
+        </p>
+        <!-- <a href="https://ti.to/asquera-event-ug/rustfest-kyiv/with/ibucwfbwhre"> -->
+          <h4>Available from March 3rd</h4>
+        <!-- </a> -->
+      </li>
+      <li class="hl">
+        <h3>✨ Supporter ✨</h3>
+        <span class="price">199+</span>
+        <p class="smallprint">
+          Supporter conference ticket gives you access all conference events and the great feeling that you've allowed us to give someone a ticket, who'd otherwise have trouble affording it.
+        </p>
+
+        <a href="https://ti.to/asquera-event-ug/rustfest-kyiv/with/nhv7rcouqe0">
+          <h4>Support now!</h4>
+        </a>
+      </li>
+      <li>
+        <h3>Student*</h3>
+        <span class="price">49</span>
+        <!-- <a href="https://ti.to/asquera-event-ug/rustfest-kyiv/with/cq94osivpys"> -->
+          <h4>Available from March 3rd</h4>
+        <!-- </a> -->
+      </li>
+
+    </ul>
+    <p class="smallprint">
+      * For a Student ticket, you must have to provide a proof in form of an <a href="https://www.isic.org/">International Student Identity Card</a> or proof of matriculation in German, English, Hungarian, Russian or Ukrainian (a <a href="https://de.wikipedia.org/wiki/Studierendenausweis">Studentenausweis</a> is sufficient) when picking up your conference badge.
+    </p>
+    <p class="smallprint">
+      Prices are advertised including VAT. All sales are final. Tickets grant access to the conference, including food and drinks. The <a href="/code-of-conduct/">Code of Conduct</a> applies. Sales are awarded on a first-come-first-serve basis, but are sold in batches.
+    </p>
+
   </section>
 </div>
+
 
 <div id="sponsors" class="sponsors">
   <section>
@@ -64,10 +102,9 @@ bodytags: with-hero
         {% endif %}
       {% endfor %}
     </ul>
-    <p>Interested in sponsoring?<p>
     <div style="text-align: right">
       <a class="button primary" href="/sponsoring/">
-        Get in touch
+        Interested in sponsoring?
       </a>
     </div>
   </section>
@@ -81,6 +118,15 @@ bodytags: with-hero
     <div style="text-align: right">
       <a href="/blog/">» more news</a>
     </div>
+  </section>
+</div>
+
+
+<div class='popout videoplaylist'>
+  <section>
+    <h1>RustFest 2016 - Videos</h1>
+    <p>Want to know what RustFest looks like? Check out the recordings from last year's event</p>
+    <iframe width="853" height="480" src="https://www.youtube.com/embed/videoseries?list=PL85XCvVPmGQh8nWR_Z-fTmPGsUWuzb-dn" frameborder="0" allowfullscreen></iframe>
   </section>
 </div>
 
