--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ bodytags: with-hero
       </li>
       <li class="hl">
         <h3>✨ Supporter ✨</h3>
-        <span class="price">199+</span>
+        <span class="price">199</span>
         <p class="smallprint">
           Supporter conference ticket gives you access all conference events and the great feeling that you've allowed us to give someone a ticket, who'd otherwise have trouble affording it.
         </p>
