--- a/sponsor-packges.html
+++ b/sponsor-packges.html
@@ -195,7 +195,7 @@ bodytags: with-hero
       </tr>
     </table>
 
-    <p class="smallprint">✔&nbsp;Included&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;❌&nbsp;Not&nbsp;included<br />* To be provided by sponsors, to be shipped to venue on the day before the conference.<br/>Prices excluding VAT (if applicable). Tickets must be bought before the official deadline. </p>
+    <p class="smallprint">✔&nbsp;Included&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;❌&nbsp;Not&nbsp;included<br />* To be provided by sponsors, to be shipped to venue on the day before the conference.<br/>** A table with space for 5+ Team members to distribute goodies, flyers and present the company and get the participants a chance to get in touch with the team<br/>Prices excluding VAT (if applicable). Tickets must be bought before the official deadline. </p>
   </section>
 </div>
 
