fixing typo in name

--- a/sponsor-packges.html
+++ b/sponsor-packges.html
@@ -8,7 +8,7 @@ bodytags: with-hero
 
 <div class="hero">
   <section>
-    <h1>RustFest Kiyv 2017</h1>
+    <h1>RustFest Kyiv 2017</h1>
     <p>Join the European Rust Community in Kyiv, April 30th</p>
   </section>
 
