[WIP] Activate regular sales links

--- a/index.html
+++ b/index.html
@@ -55,19 +55,20 @@ bodytags: with-hero
     <ul class="tickets">
       <li>
         <h3>Regular</h3>
+        <span class="ribbon">early bird</span>
         <span class="price">89</span>
         <p class="smallprint">
-          Regular conference ticket.
+          Regular conference ticket for the reduced price. <a href="http://blog.rustfest.eu/tickets-on-sale-and-timeline">Limited time offer</a>.
         </p>
-        <!-- <a href="https://ti.to/asquera-event-ug/rustfest-kyiv/with/ibucwfbwhre"> -->
-          <h4>Available from March 3rd</h4>
-        <!-- </a> -->
+        <a href="https://ti.to/asquera-event-ug/rustfest-kyiv/with/ibucwfbwhre">
+          <h4>Get one</h4>
+        </a>
       </li>
       <li class="hl">
         <h3>✨ Supporter ✨</h3>
         <span class="price">199</span>
         <p class="smallprint">
-          Supporter conference ticket gives you access all conference events and the great feeling that you've allowed us to give someone a ticket, who'd otherwise have trouble affording it.
+          By choosing this ticket, you've allowed us to give someone a ticket, who'd otherwise have trouble affording it. Thank you!
         </p>
 
         <a href="https://ti.to/asquera-event-ug/rustfest-kyiv/with/nhv7rcouqe0">
@@ -77,17 +78,21 @@ bodytags: with-hero
       <li>
         <h3>Student*</h3>
         <span class="price">49</span>
-        <!-- <a href="https://ti.to/asquera-event-ug/rustfest-kyiv/with/cq94osivpys"> -->
-          <h4>Available from March 3rd</h4>
-        <!-- </a> -->
+        <p class="smallprint">
+          Discounted Ticket for students.
+        </p>
+        <a href="https://ti.to/asquera-event-ug/rustfest-kyiv/with/cq94osivpys">
+          <h4>Buy</h4>
+        </a>
       </li>
 
     </ul>
     <p class="smallprint">
-      * For a Student ticket, you must have to provide a proof in form of an <a href="https://www.isic.org/">International Student Identity Card</a> or proof of matriculation in German, English, Hungarian, Russian or Ukrainian (a <a href="https://de.wikipedia.org/wiki/Studierendenausweis">Studentenausweis</a> is sufficient) when picking up your conference badge.
-    </p>
-    <p class="smallprint">
       Prices are advertised including VAT. All sales are final. Tickets grant access to the conference, including food and drinks. The <a href="/code-of-conduct/">Code of Conduct</a> applies. Sales are awarded on a first-come-first-serve basis, but are sold in batches.
+    </p>
+
+    <p class="smallprint">
+      * For a Student ticket, you must have to provide a proof in form of an <a href="https://www.isic.org/">International Student Identity Card</a> or proof of matriculation in German, English, Hungarian, Russian or Ukrainian (a <a href="https://de.wikipedia.org/wiki/Studierendenausweis">Studentenausweis</a> is sufficient) when picking up your conference badge.
     </p>
 
   </section>
