link to our encouragement first

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ bodytags: with-hero
 
 
       <div style="text-align:center; font-size: 2em;">
-        <a href="https://cfp.rustfest.eu/" class="button primary cfp-button">Call for Propsals</a>
+        <a href="/cfp/" class="button primary cfp-button">Call for Propsals</a>
       </div>
 
 
