--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ bodytags: with-hero
 
 
       <div style="text-align:center; font-size: 2em;">
-        <a href="/cfp/" class="button primary cfp-button">Call for Propsals</a>
+        <a href="/cfp/" class="button primary cfp-button">Call for Proposals</a>
       </div>
 
 
