Responsively embed youtube
This should make the site a lot nicer on mobile.

--- a/index.html
+++ b/index.html
@@ -133,7 +133,9 @@ bodytags: with-hero
   <section>
     <h1>RustFest 2016 - Videos</h1>
     <p>Want to know what RustFest looks like? Check out the recordings from last year's event</p>
-    <iframe width="853" height="480" src="https://www.youtube.com/embed/videoseries?list=PL85XCvVPmGQh8nWR_Z-fTmPGsUWuzb-dn" frameborder="0" allowfullscreen></iframe>
+    <div class="embed ratio-16-9">
+      <iframe src="https://www.youtube.com/embed/videoseries?list=PL85XCvVPmGQh8nWR_Z-fTmPGsUWuzb-dn" frameborder="0" allowfullscreen></iframe>
+    </div>
   </section>
 </div>
 
