--- a/index.html
+++ b/index.html
@@ -39,12 +39,11 @@ bodytags: with-hero
         </ul>
       </div>
     </div>
-
-
+<!-- 
       <div style="text-align:center; font-size: 2em;">
         <a href="/#tickets" class="button primary cfp-button">Buy Ticket now</a>
       </div>
-
+ -->
 
   </section>
 </div>
@@ -98,8 +97,7 @@ bodytags: with-hero
   </section>
 </div>
 
-
-<div id="sponsors" class="sponsors">
+<div class='popout sponsors'>
   <section>
     <h2>Sponsors</h2>
     <ul>
@@ -117,6 +115,38 @@ bodytags: with-hero
   </section>
 </div>
 
+
+<div class="">
+  <section id="speakers">
+    <h2>Keynotes by</h2>
+    <ul class="speakers">
+      {% for item in site.data.speakers %}
+        {% assign speaker = item[1] %}
+        {% if speaker.featured %}
+          <li class="speaker-box">
+            <div  class="portrait">
+              <img src="/assets/speakers/{{speaker.thumbnailUrl}}" />
+            </div>
+            <div class="info">
+              <span class="name">{{speaker.name}}</span>
+              <ul class="links">
+                {% for link in speaker.links %}
+                  <li><a href="{{link.link}}" target="_blank" title="{{link.title}}">{% include icons/{{link.icon}}.svg %}</a></li>
+                {% endfor %}
+              </ul>
+            </div>
+            {% if speaker.desc %}
+              <div class="desc">
+                {{speaker.desc | markdownify | truncatewords: 50}}
+              </div>
+            {% endif %}
+          </li>
+        {% endif %}
+      {% endfor %}
+    </ul>
+  </section>
+</div>
+
 <div id="news">
   <section>
     <h2 class="headline">Latest news <a href="{{ "/feed.xml" | prepend: site.baseurl }}" target="_blank">{% include icons/rss-square.svg %}</a></h2>
@@ -128,7 +158,6 @@ bodytags: with-hero
   </section>
 </div>
 
-
 <div class='popout videoplaylist'>
   <section>
     <h1>RustFest 2016 - Videos</h1>
@@ -138,6 +167,7 @@ bodytags: with-hero
     </div>
   </section>
 </div>
+
 
 <div id="newsletter">
   <section>
