update ticket prices

--- a/index.html
+++ b/index.html
@@ -54,10 +54,10 @@ bodytags: with-hero
     <ul class="tickets">
       <li>
         <h3>Regular</h3>
-        <span class="ribbon">early bird</span>
-        <span class="price">89</span>
+        <span class="ribbon">limited</span>
+        <span class="price">99</span>
         <p class="smallprint">
-          Regular conference ticket for the reduced price. <a href="http://blog.rustfest.eu/tickets-on-sale-and-timeline">Limited time offer</a>.
+          Regular conference ticket. <a href="http://blog.rustfest.eu/tickets-on-sale-and-timeline">Limited time offer</a>.
         </p>
         <a href="https://ti.to/asquera-event-ug/rustfest-kyiv">
           <h4>Get one</h4>
