Talks aren't all key notes

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ bodytags: with-hero
 
 <div class="">
   <section id="speakers">
-    <h2>Keynotes by</h2>
+    <h2>Talks by</h2>
     <ul class="speakers">
       {% for item in site.data.speakers %}
         {% assign speaker = item[1] %}
