add workshop day info

--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@ bodytags: with-hero
     <div class="itemgroup">
 
       <div>
+        <p class="desc">Workshops</p>
+        <p>
+          Saturday,<br/>
+          April 29th, 2017
+        </p>
+      </div>
+
+      <div>
         <p class="desc">Talks</p>
         <p>
           Sunday,<br/>
