--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@ bodytags: with-hero
         <p class="desc">Location</p>
         <p>
           <address title="6 V. Hetmana Street, 03057, Kyiv">
-            <a href="http://cosmopolite-kiev.com/conference/new-congress-hall">Cosmopolite New Congress Hall</a><br />
-            Kyiv, Ukraine<br/>
+            <a href="/travel/#accommodation">Cosmopolite</a><br />
+            <a href="/location/">Kyiv</a>, Ukraine<br/>
           </address>
         </p>
       </div>
