--- a/index.html
+++ b/index.html
@@ -60,33 +60,33 @@ bodytags: with-hero
   <section>
     <h2>Get your Ticket now</h2>
     <ul class="tickets">
+
       <li>
+        <h3>Student*</h3>
+        <span class="price">49</span>
+        <p class="smallprint">
+          Discounted Ticket for students. Gives you full access to conference and workshops.
+        </p>
+        <a href="https://ti.to/asquera-event-ug/rustfest-kyiv">
+          <h4>Buy</h4>
+        </a>
+      </li>
+      <li class="hl">
         <h3>Regular</h3>
         <span class="ribbon">limited</span>
-        <span class="price">99</span>
+        <span class="price">119</span>
         <p class="smallprint">
-          Regular conference ticket. <a href="http://blog.rustfest.eu/tickets-on-sale-and-timeline">Limited time offer</a>.
+          The regular ticket will give you access to both the workshops and the conference. Buy now, <a href="http://blog.rustfest.eu/tickets-on-sale-and-timeline">tickets are only available until April 23rd</a>.
         </p>
         <a href="https://ti.to/asquera-event-ug/rustfest-kyiv">
           <h4>Get one</h4>
         </a>
       </li>
-      <li class="hl">
-        <h3>✨ Supporter ✨</h3>
+      <li>
+        <h3>Supporter</h3>
         <span class="price">199</span>
         <p class="smallprint">
           By choosing this ticket, you've allowed us to give someone a ticket, who'd otherwise have trouble affording it. Thank you!
-        </p>
-
-        <a href="https://ti.to/asquera-event-ug/rustfest-kyiv">
-          <h4>Support now!</h4>
-        </a>
-      </li>
-      <li>
-        <h3>Student*</h3>
-        <span class="price">49</span>
-        <p class="smallprint">
-          Discounted Ticket for students.
         </p>
         <a href="https://ti.to/asquera-event-ug/rustfest-kyiv">
           <h4>Buy</h4>
