replace sponsor with diversity tickets

--- a/index.html
+++ b/index.html
@@ -83,13 +83,15 @@ bodytags: with-hero
         </a>
       </li>
       <li>
-        <h3>Supporter</h3>
-        <span class="price">199</span>
+        <h3>Diversity</h3>
+        <span class="ribbon">travel funds</span>
+        <span class="price">0</span>
         <p class="smallprint">
-          By choosing this ticket, you've allowed us to give someone a ticket, who'd otherwise have trouble affording it. Thank you!
+        Are you of a group generally marginalized in Tech? Apply for a free ticket & funding to support your travels.
+          
         </p>
-        <a href="https://ti.to/asquera-event-ug/rustfest-kyiv">
-          <h4>Buy</h4>
+        <a href="https://diversitytickets.org/events/72">
+          <h4>Apply now!</h4>
         </a>
       </li>
 
