--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ bodytags: with-hero
         <span class="ribbon">travel funds</span>
         <span class="price">0</span>
         <p class="smallprint">
-        Are you of a group generally marginalized in Tech? Apply for a free ticket & funding to support your travels.
+        Are you of a group generally marginalized in tech? Apply for a free ticket & funding to support your travels.
           
         </p>
         <a href="https://diversitytickets.org/events/72">
