minor updates regarind sponsorship: start advertising for zurich

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ bodytags: with-hero
 
 <div class='popout sponsors'>
   <section>
-    <h2>Sponsors</h2>
+    <h2>Main Sponsors</h2>
     <ul>
       {% for sponsor in site.data.sponsors %}
         {% if sponsor.featured %}
@@ -119,7 +119,7 @@ bodytags: with-hero
     </ul>
     <div style="text-align: right">
       <a class="button primary" href="/sponsoring/">
-        Interested in sponsoring?
+        See all sponsors
       </a>
     </div>
   </section>
